# FairWage

./: .gitignore  .replit  DEPLOYMENT-GUIDE.md  DEPLOYMENT.md  LICENSE  PUBLIC-DEPLOYMENT.md  README.md  REAL-DEPLOYMENT.md  deploy-frontend.bat  implementasi_frontend.md  package-lock.json  package.json  render.yaml  replit.md  server.js  tatus
.github/workflows/: deploy.yml
Backend/: Cargo.toml  README.md  config.example.js  contract-discovery.js  contract-registry.json  package-lock.json  package.json  server.js  test-contract-discovery.js  test-freeze-debug.js
Backend/contracts/fungible/: Cargo.toml
Backend/contracts/fungible/src/: lib.rs  test.rs
Backend/routes/: discoverContracts.js
Frontend/: .env.production  Looking at your error, the issue is with.txt  next.config.js  package-lock.json  package.json  tailwind.config.ts
Frontend/app/: globals.css  layout.tsx  page.tsx
Frontend/app/employee/: page.tsx
Frontend/app/employer/: page.tsx
Frontend/components/: BrowserWarning.tsx  CompanySelector.tsx  ErrorBoundary.tsx  Header.tsx
Frontend/components/employee/: BalanceCard.tsx  (+4 more)
Frontend/contexts/: WalletContext.tsx
Frontend/lib/: api-client.ts  contractDiscovery.ts  event-utils.ts  soroban.ts
attached_assets/: Pasted--File-frontend-lib-soroban-ts-Updated-to-use-Rabet-Wallet-NO-npm-package-needed-Declare--1757659327581_1757659327582.txt  Pasted-const-express-require-express-const-cors-require-cors-const-StellarSdk-require-stell-1757659282014_1757659282015.txt  server_1757654933423.js  soroban_1757655709091.ts
frontend/lib/: soroban.ts
(+40 files in other folders)
